syntax = "proto3";

package ip_asset_mapping;

message IpAssetMapping {
    string ip = 1;
    string asset_id = 2;
    uint64 timestamp = 3;
}

message IpAssetMappings {
    repeated IpAssetMapping mappings = 1;
}
